<resources>
    <string name="app_name">Group Pay</string>
    <string name="register_link">Don\'t have an account? Register here</string>
    <string name="login_link">Already have an account? Login</string>
    <string name="user_doesnt_exist">These credentials don"'"t seem to be correct. Please try again</string>
    <string name="invalid_details">Incorrect email or passwords</string>
    <string name="generic_continue">CONTINUE</string>
    <string name="nav_drawer_profile">Profile</string>
    <string name="nav_drawer_cards">Credit/Debit Cards</string>
    <string name="nav_drawer_log_out">Log Out</string>
    <string name="nav_drawer_open">Open</string>
    <string name="nav_drawer_close">Close</string>
    <string name="toolbar_home_title">Active Accounts</string>
    <string name="toolbar_payment_methods_title">Payment Methods</string>
    <string name="toolbar_profile_title">Profile Details</string>
    <string name="toolbar_add_payment_method_title">Add Credit/Debit Card</string>
    <string name="toolbar_enter_payment_details_title">Enter Payment Details</string>
    <string name="toolbar_edit_email_address_title">Edit Email Address</string>
    <string name="toolbar_edit_phone_number_title">Edit Phone Number</string>
    <string name="toolbar_deposit_money_to_group_title">Deposit Money</string>
    <string name="toolbar_edit_full_name_title">Edit Full Name</string>
    <string name="toolbar_create_group_stage1">Create New Group</string>
    <string name="toolbar_create_group_stage2">Add Group Members</string>
    <string name="toolbar_all_transactions_title">All Transactions</string>
    <string name="add_card_secure_details">Card details are saved securely</string>
    <string name="profile_edit_email_title">Edit Email Address</string>
    <string name="profile_edit_email_hint">New Email Address</string>
    <string name="profile_edit_phone_title">Edit Phone Number</string>
    <string name="profile_edit_phone_hint">New Phone Number</string>
    <string name="profile_edit_fullname_title">Edit Name</string>
    <string name="profile_edit_firstname_hint">New First Name</string>
    <string name="profile_edit_lastname_hint">New Last Name</string>
    <string name="deposit_amount_to_group_header">Deposit Money Into</string>
    <string name="deposit_amount_to_group_currency">EURO</string>
    <string name="enter_payment_method_header">Payments are made securely using Stripe</string>
    <string name="euro_currency_symbol">€</string>
    <string name="previous_transactions">Previous Transactions</string>
    <string name="all_transactions">All Transactions</string>
    <string name="save_card_details_dialog">"We can save these card details to make it quicker when paying next time. What would you like to do?</string>
    <string name="hidden_card_details">\U25CF\U25CF\U25CF\U25CF \U25CF\U25CF\U25CF\U25CF \U25CF\U25CF\U25CF\U25CF</string>
    <string name="detailed_group_group_info">Group Info</string>
    <string name="detailed_group_group_messages">Messages</string>
    <string name="group_info_leave_group">Leave Group</string>
    <string name="no_deposits_made">No Deposits Yet!</string>
    <string name="no_cards_added">No Cards Added</string>
    <string name="deposit_money_amount_hint">€0</string>
    <string name="virtualPaymentDetailsHoldToReveal">Hold card to reveal CVC code</string>
    <string name="verify_email_button">VERIFY EMAIL</string>
    <string name="verify_phone_number_button">VERIFY PHONE NUMBER</string>
    <string name="verification_purpose_text">We just need to verify that the details you have entered belong to you. Please choose a method of verification below.</string>
    <string name="depostToGroupExceedsTarget">Exceeds target amount!</string>
    <string name="contacts_with_grouppay_accounts">Contacts with GroupPay accounts</string>
    <string name="contacts_not_on_grouppay">Contacts not on GroupPay</string>
    <string name="profileActivityChangePhoto">CHANGE PHOTO</string>
    <string name="allTransactionsMemberOf">You\'re Currently a Member Of</string>
    <string name="cardholderName">Cardholder Name</string>
    <string name="expiryDate">Expiry Date</string>
    <string name="cvvCode">CVV/CVC</string>
    <string name="savePaymentCard">SAVE PAYMENT CARD</string>
    <string name="cardNumber">Card Number</string>
    <string name="chooseSavedPaymentMethod">Choose a saved payment method instead</string>
    <string name="useNewPaymentDetails">Use new payment details</string>
    <string name="payByNewCard">PAY</string>
    <string name="groupNameHint">Group Name</string>
    <string name="groupDescriptionHint">Add an optional group description here...</string>
    <string name="euroCurrencyIdentifier">EUR</string>
    <string name="amountNeededHint">Amount Needed</string>
    <string name="registrationFirstNameHint">First Name</string>
    <string name="registrationLastNameHint">Last Name</string>
    <string name="registrationEmailHint">Email</string>
    <string name="registrationPasswordHint">Password</string>
    <string name="registrationConfirmPasswordHint">Confirm Password</string>
    <string name="registrationMobileNumberHint">Mobile Number</string>
    <string name="groupInfoGroupDescription">Description</string>
    <string name="groupInfoAddGroupParticipants">Add Group Participants</string>
</resources>