<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="grouppay.dylankilbride.com.activities.CreateGroupAccountStage1">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ToolbarTheme">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/createGroupNameToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/whiteText"
            app:popupTheme="@style/ToolbarTheme" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical"
        android:layout_marginTop="?attr/actionBarSize"
        android:weightSum="5">

        <LinearLayout
            android:id="@+id/nameAndImageRL"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:layout_weight="4"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@drawable/add_payment_header_bg">

            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/createGroupAccountStage1Image"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/no_group_icon"
                android:clickable="true"
                app:civ_border_width="1dp"
                app:civ_circle_background_color="@color/whiteText"
                app:civ_border_color="@color/profileImageBorder"/>

            <EditText
                android:id="@+id/createGroupAccountStage1NameET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/groupNameHint"
                android:inputType="text"
                android:maxLines="1"
                android:lines="1"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:maxLength="20"
                android:fontFamily="@font/cairo"
                android:backgroundTint="@color/editTextBgTintStandard"/>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/participantsRL"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:layout_weight="1">

            <EditText
                android:id="@+id/createGroupAccountStage1DescriptionET"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp"
                android:background="@drawable/create_group_description_bg"
                android:fontFamily="@font/cairo"
                android:gravity="start"
                android:inputType="textCapSentences|textAutoCorrect"
                android:imeOptions="actionNext"
                android:hint="@string/groupDescriptionHint"
                android:maxLength="150"
                android:padding="5dp" />

            <RelativeLayout
                android:id="@+id/stage1AmountSection"
                android:layout_marginTop="30dp"
                android:layout_below="@+id/createGroupAccountStage1DescriptionET"
                android:layout_width="match_parent"
                android:layout_height="70dp">

                <TextView
                    android:id="@+id/createGroupAccountStage1AmtTV"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="30sp"
                    android:text="@string/euroCurrencyIdentifier"
                    android:fontFamily="@font/cairo"
                    android:layout_marginEnd="20dp"
                    android:gravity="center_vertical"/>

                <TextView
                    android:id="@+id/createGroupStage1EuroSymbolTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/euro_currency_symbol"
                    android:textSize="27sp"
                    android:textColor="#151515"
                    android:layout_toStartOf="@+id/createGroupAccountStage1AmtNeededET"
                    android:layout_centerVertical="true"
                    android:visibility="gone"/>

                <EditText
                    android:id="@+id/createGroupAccountStage1AmtNeededET"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:fontFamily="@font/cairo"
                    android:textSize="27sp"
                    android:digits="0123456789.,€"
                    android:inputType="number"
                    android:imeOptions="actionGo"
                    android:maxLength="18"
                    android:hint="@string/deposit_money_amount_hint"
                    android:background="@android:color/transparent"
                    />

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_below="@+id/stage1AmountSection"
                android:layout_marginTop="-20dp"
                android:text="@string/amountNeededHint"
                android:fontFamily="@font/cairo"
                android:gravity="center_vertical"/>

            <Button
                android:id="@+id/createGroupAccountStage1ContinueBTN"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="30dp"
                android:layout_alignParentBottom="true"
                android:text="@string/generic_continue"
                android:textSize="15sp"
                android:textColor="@color/whiteText"
                android:background="@drawable/generic_rounded_continue_button_bg"/>

        </RelativeLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
