<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ToolbarTheme">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/depositMoneyToGroupToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/whiteText"
            app:popupTheme="@style/ToolbarTheme" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/add_card_standard_margin"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/deposit_money"/>

        <TextView
            android:id="@+id/depositMoneyToGroupTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            tools:text="Deposit Money Into Holiday 2010"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/deposit_amount_to_group_currency"
            android:fontFamily="@font/cairo"
            android:layout_marginEnd="40dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:fontFamily="@font/cairo"
            android:text="@string/euro_currency_symbol"/>

        <EditText
            android:id="@+id/depositMoneyToGroupAmountET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cairo"
            android:textSize="27sp"
            android:inputType="numberDecimal"
            android:backgroundTint="@color/editTextBgTintStandard"
            tools:text="100"/>



    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/depositMoneyToGroupBTN"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="40dp"
            android:layout_alignParentBottom="true"
            android:text="@string/generic_continue"
            android:textSize="15sp"
            android:textColor="@color/whiteText"
            android:background="@drawable/generic_rounded_continue_button_bg"/>

    </RelativeLayout>


</LinearLayout>
